fix: avoiding game div to get too small (in this case the game became bigger than the modal)

--- a/frontend/modals_manager/styles/modals.css
+++ b/frontend/modals_manager/styles/modals.css
@@ -126,8 +126,9 @@
 
 #modal-game-dialog
 {
-	height: 80vh;
+	height: 80vh !important;
 	width: 80vw;
+	min-height: 100px !important;
 	--bs-modal-margin: 10vh 10vh 10vh 10vh;
 	max-width: none;
 }
